@startuml
'https://plantuml.com/class-diagram


folderOptions <-- Base43
website <-- Base43
StringBase43 <-- Base43
website <-- StringBase43
folderOptions <-- StringBase43
Base43 <-- StringBase43
class Base43 {
printConsoleOutput();
}
class StringBase43{
getWebsiteName();
getAuthorName();
useJavascriptFiles();
useCSSFiles();
folderOptions
outputToFile();
outputToConsole();
}
class folderOptions{
    willCreateFolder();
}

class website{
    fillFile();
    createFolders();
}
@enduml